Version 2.1.0 - 06/04/2025
- Updated to version 0.98.
- Rebalanced hycean worlds to be much more in line with vanilla planets:
   . Hycean planets are now rarer.
   . Ores, Rare Ores and Ruins are slightly worse.
   . Organics are considerably worse
   . Atmospheric conditions tend to favour Thin Atmosphere.
- Reverted Military Virus production bonus to +3 (was +4).
- Fixed Crashed Drone having an incorrect size 6 effect.
- Some minor optimization to stat calculations to prevent weird rounding errors.

Version 2.0.2 - 19/10/2024
- Added a helper for modders who have certain US planets in their system or that generate procgen systems after a game has started.
- Fixed certain US planet types not spawning with the correct conditions in the Core-Worlds.
- Nerfed Luminescent Clouds, Volatiles production is now +2 (was +3).
- Fixed Hycean planets having a higher spawn chance than intended.
- The Pre-Collapse Cryosanctum can now rarely spawn with Rare Ores.
- Minor text tweaks.

Version 2.0.1 - 11/07/2024
- Added Thin Atmosphere to Dust worlds to match their description.
- Pre-Collapse Cryosanctum now reduces max industries by 1.
- Added a new easter egg name.

Version 2.0.0 - 28/06/2024
- Added 4 new planets:
    . Hycean worlds with a unique condition pool (special thanks to TouchOfVanilla for the original idea and lots of feedback).
    . The Fluorescent Giant, a new unique planet that spawns once per sector (image source: Tartiflette's Texture Pack).
    . Savannah and Alpine worlds, two new variants for Jungle and Tundra worlds (image source: TextureForPlanets).
- Added a new unique condition: Pre-Collapse Cryosanctum (special thanks to SirHartley for help with the implementation).
- Added stellar clouds (purely cosmetic, image source: Tartiflette's Texture Pack).
- Added organics to Methane worlds.
- Overhauled the spawn system for certain planets:
    . US_volcanic now has the stats of lava_minor instead of lava (as originally intended).