@@ -1,7 +1,0 @@
-id,age,tags,freqYOUNG,freqAVERAGE,freqOLD,minRadius,maxRadius,habZoneStart,probOrbits,minOrbits,maxOrbits,coronaMin,coronaMult,coronaVar,solarWind,minFlare,maxFlare,crLossMult,lightColorMin,lightColorMax
-US_star_blue_giant,YOUNG,,30,15,5,1100,1300,6,0.95,3,9,500,1,0.5,15,0,3,5,155 175 255,225 225 255
-US_star_yellow,ANY,,40,35,30,800,900,3,0.95,2,7,400,1,0.5,10,0,1,3,255 205 205,255 255 255
-US_star_orange,ANY,,50,45,40,650,750,3,0.95,2,6,400,1,0.5,10,0,1,3,255 180 140,255 240 200
-US_star_red_giant,OLD,,5,20,30,1100,1300,4,0.95,3,10,500,1,0.5,5,0,1,2,255 175 135,255 225 225
-US_star_white,OLD,,10,20,50,400,700,2,0.95,2,6,300,1,0.25,5,0,1,2,230 230 230,255 255 255
-US_star_browndwarf,ANY,,5,5,5,400,450,0,0.5,1,5,150,1,0.25,1,0,0,1,255 175 135,255 225 225
