@@ -1,263 +1,4 @@
 {
-	"US_star_blue_giant": {
-		"name": "Blue Giant",
-		"descriptionId": "star_blue_giant",
-		"tilt": 0,
-		"pitch": 0,
-		"rotation": -3,
-		"planetColor": [
-			255,
-			255,
-			255,
-			255
-		],
-		"atmosphereThickness": 0.25,
-		"atmosphereThicknessMin": 10,
-		"atmosphereColor": [
-			127,
-			190,
-			255,
-			255
-		],
-		"texture": "graphics/planets/US_star_textureCustomBlue.jpg",
-		"icon": "graphics/warroom/icon_star.png",
-		"iconColor": [
-			127,
-			190,
-			255,
-			255
-		],
-		"starCoronaSprite": "graphics/fx/US_star_halo_intense.png",
-		"starCoronaColor": [
-			127,
-			190,
-			255,
-			60
-		],
-		"starCoronaSizeMult": 5.12,
-		"isStar": true,
-		"lightPosition": [
-			0,
-			0,
-			10
-		]
-	},
-	"US_star_yellow": {
-		"name": "Yellow Star",
-		"descriptionId": "star_yellow",
-		"tilt": 0,
-		"pitch": 0,
-		"rotation": -3,
-		"planetColor": [
-			255,
-			255,
-			255,
-			255
-		],
-		"atmosphereThickness": 0.25,
-		"atmosphereThicknessMin": 10,
-		"atmosphereColor": [
-			255,
-			255,
-			160,
-			255
-		],
-		"texture": "graphics/planets/US_star_textureCustomYellow.jpg",
-		"icon": "graphics/warroom/icon_star.png",
-		"iconColor": [
-			255,
-			255,
-			0,
-			255
-		],
-		"starCoronaSprite": "graphics/fx/US_star_halo_intense.png",
-		"starCoronaColor": [
-			255,
-			255,
-			150,
-			60
-		],
-		"starCoronaSizeMult": 5.12,
-		"isStar": true,
-		"lightPosition": [
-			0,
-			0,
-			10
-		]
-	},
-	"US_star_orange": {
-		"name": "Orange Star",
-		"descriptionId": "star_orange",
-		"aOrAn": "an",
-		"tilt": 0,
-		"pitch": 0,
-		"rotation": -3,
-		"planetColor": [
-			255,
-			255,
-			255,
-			255
-		],
-		"atmosphereThickness": 0.25,
-		"atmosphereThicknessMin": 10,
-		"atmosphereColor": [
-			255,
-			200,
-			160,
-			255
-		],
-		"texture": "graphics/planets/US_star_textureCustomOrange.jpg",
-		"icon": "graphics/warroom/icon_star.png",
-		"iconColor": [
-			255,
-			135,
-			40,
-			255
-		],
-		"starCoronaSprite": "graphics/fx/US_star_halo_intense.png",
-		"starCoronaColor": [
-			255,
-			240,
-			150,
-			60
-		],
-		"starCoronaSizeMult": 5.12,
-		"isStar": true,
-		"lightPosition": [
-			0,
-			0,
-			10
-		]
-	},
-	"US_star_red_giant": {
-		"name": "Red Giant",
-		"descriptionId": "star_red_giant",
-		"tilt": -10,
-		"pitch": 0,
-		"rotation": -3,
-		"planetColor": [
-			255,
-			255,
-			255,
-			255
-		],
-		"atmosphereThickness": 0.5,
-		"atmosphereThicknessMin": 10,
-		"atmosphereColor": [
-			255,
-			50,
-			0,
-			212
-		],
-		"texture": "graphics/planets/US_star_textureCustomRed.jpg",
-		"icon": "graphics/warroom/icon_star.png",
-		"iconColor": [
-			255,
-			0,
-			0,
-			255
-		],
-		"isStar": true,
-		"lightPosition": [
-			0,
-			0,
-			8
-		],
-		"starCoronaSprite": "graphics/fx/US_star_halo_unstable.png",
-		"starCoronaColor": [
-			255,
-			0,
-			0,
-			100
-		],
-		"starCoronaSizeMult": 5.12
-	},
-	"US_star_white": {
-		"name": "White Dwarf",
-		"descriptionId": "star_white",
-		"tilt": 0,
-		"pitch": 0,
-		"rotation": -3,
-		"planetColor": [
-			255,
-			255,
-			255,
-			255
-		],
-		"atmosphereThickness": 0.25,
-		"atmosphereThicknessMin": 10,
-		"atmosphereColor": [
-			255,
-			255,
-			255,
-			255
-		],
-		"texture": "graphics/planets/US_star_textureCustomWhite.jpg",
-		"icon": "graphics/warroom/icon_star.png",
-		"iconColor": [
-			255,
-			255,
-			255,
-			255
-		],
-		"starCoronaSprite": "graphics/fx/US_star_halo_unstable.png",
-		"starCoronaColor": [
-			255,
-			255,
-			255,
-			60
-		],
-		"starCoronaSizeMult": 5.12,
-		"isStar": true,
-		"lightPosition": [
-			0,
-			0,
-			10
-		]
-	},
-	"US_star_browndwarf": {
-		"name": "Brown Dwarf",
-		"descriptionId": "star_browndwarf",
-		"tilt": -16,
-		"pitch": 10,
-		"rotation": -5,
-		"planetColor": [
-			255,
-			255,
-			255,
-			255
-		],
-		"atmosphereThickness": 0.5,
-		"atmosphereThicknessMin": 10,
-		"atmosphereColor": [
-			200,
-			75,
-			20,
-			200
-		],
-		"texture": "graphics/planets/US_star_textureCustomBrown.jpg",
-		"icon": "graphics/warroom/icon_star.png",
-		"iconColor": [
-			240,
-			75,
-			20,
-			255
-		],
-		"isStar": true,
-		"lightPosition": [
-			0,
-			0,
-			10
-		],
-		"starCoronaSprite": "graphics/fx/US_star_halo_unstable.png",
-		"starCoronaColor": [
-			255,
-			50,
-			10,
-			100
-		],
-		"starCoronaSizeMult": 5.12
-	},
 	"US_gas_giant": {
 		"name": "Ice Giant",
 		"descriptionId": "ice_giant",
